--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,10 @@ dependencies:
   location: ^8.0.1
   geolocator: ^14.0.2
   flutter_polyline_points: ^3.1.0
+  google_polyline_algorithm: ^3.0.0
   lottie: ^3.1.0
   flutter_launcher_icons: ^0.14.4
+  flutter_dotenv: ^5.1.0
 
   # Local Storage
   shared_preferences: ^2.2.0
@@ -85,6 +87,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/lottie/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
